--- a/src/App.css
+++ b/src/App.css
@@ -1,7 +1,32 @@
 .App {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
   text-align: center;
+  background-color: #ffc07f;
+  height: 100vh;
+  margin: 0;
 }
 
-h1{
-  font-family: cursive;
+h1 {
+  font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+}
+
+h3{
+
+}
+
+.atTheTop{
+  display:flex;
+  flex-direction: column;
+  color:black;
+  border-style: groove;
+  width: 50%;
+  background-color: #FFCF99;
+  margin: 10px;
+}
+
+img{
+  padding: 20px;
+
 }
